examples/intervals/call_site_too_loose.err.expected
../examples/intervals/call_site_too_loose.kai:16:45: error: call to `divide`: caller refinement `b >= 0` does not entail callee precondition `b > 0`

