examples/intervals/call_site_too_loose.kai
# Issue #83 sub-case 3d — caller refinement strictly weaker than
# callee precondition. The caller declares `b: Int where >= 0`,
# which admits `b == 0`. The callee `divide` requires `b > 0`.
# Because the caller HAS a refinement, the typer demands it
# entail the callee's precondition — leaving the discrepancy to
# runtime would silently violate the type-level contract. The
# compile fails at the call-site with a diagnostic naming both
# predicates.
#
# Negative fixture — wired as a `--check` golden so the diagnostic
# is pinned; CI runs `kaic2 --check` and diffs stderr against
# `call_site_too_loose.err.expected`.

fn divide(a: Int, b: Int) : Int requires b > 0 = a / b

fn use_too_loose(b: Int where >= 0) : Int = divide(10, b)
